--- a/game/Snake Game.html
+++ b/game/Snake Game.html
@@ -213,4 +213,9 @@
         main();
     </script>
 </body>
+    
+    <footer>
+        © 2024 pritpatel. All rights reserved.
+    </footer>
+
 </html>
